--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -17,3 +17,10 @@ authors:
     avatar: https://vignette.wikia.nocookie.net/el-bestiario/images/e/ea/Dios_Cthulhu.png/revision/latest?cb=20150225025645&path-prefix=es        # Author avatar
     slug: url           # Author profile slug
     url: url            # Author website URL
+  MoccaBM:
+    name: Juan Diego Moncada
+    description: Hic Sunt Dracones # Author description
+    avatar: https://i.ebayimg.com/00/s/MTYwMFgxMTY2/z/vJkAAOSww1ljuOrh/$_57.JPG?set_id=880000500F        # Author avatar
+    slug: url           # Author profile slug
+    url: url            # Author website URL
+
