Creación de la sección de Contribuciones

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,11 @@ theme:
     - navigation.footer
     - navigation.top
 
+nav:
+  - Inicio: index.md
+  - Blog: blog/index.md
+  - Contribuciones: contribuciones.md
+
 copyright: Copyright &copy; 2024 Pluma y Tertulia & Contribuidores
 
 plugins:
