Update EnigmaPrime author profile
Revised the description and avatar URL for the EnigmaPrime author in .authors.yml to reflect current information.

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -25,6 +25,6 @@ authors:
     url: url            # Author website URL
   EnigmaPrime:
     name: Enigma Prime      # Author name
-    description: Hic Sunt Dracones # Author description
-    avatar: https://i.pinimg.com/736x/a6/cf/1f/a6cf1f26ecc6bf5671dc6fecb55b96c2.jpg        # Author avatar
+    description: Estudiante doctoral de física matemática en la Universidad Purdue # Author description
+    avatar: https://heraldodemexico.com.mx/u/fotografias/fotosnoticias/2021/1/9/303160.jpg        # Author avatar
 
