Add blog post on Colombia's geostationary orbit claim
Added a new blog post analyzing Colombia's constitutional claim over the geostationary orbit and contrasting it with the country's limited satellite capabilities. Updated the author's description in .authors.yml to include academic background.

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -1,7 +1,7 @@
 authors:
   Chachalingo:
     name: Santiago Acuña González      # Author name
-    description: Bogotano sumido en el sueño dogmático # Author description
+    description: Bogotano sumido en el sueño dogmático. B.S. in Aeronautics; Embry-Riddle Aeronautical University # Author description
     avatar: https://es.wahooart.com/Art.nsf/O/8YDVBA/$File/Juan-Gris-The-Smoker.JPG         # Author avatar
     slug: url           # Author profile slug
     url: url            # Author website URL
